--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yazo.Pass</title>
+    <title>VictorBDias</title>
   </head>
   <body>
     <div id="root"></div>
